# poo-advanced

./: .buildinfo  README.html  README.md  _config.yml  _toc.yml  genindex.html  objects.inv  plano_ensino.md  search.html  searchindex.js
.devcontainer/: devcontainer.json
.github/: copilot-instructions-bkp.md  copilot-instructions.html  copilot-instructions.md  prompt-gerar-aulas.html  prompt-gerar-aulas.md
.github/prompts/: chatgpt-03.md  chatgpt.md  copilot.md  gemini.md  google_search.md
_sources/: README.md
_sources/docs/aulas/aula-05-06-git-ci-cd-github-actions/: README.md
docs/aulas/aula-01-02-boas-praticas-design-patters/: README.html  README.md  plano_aula.md
docs/aulas/aula-01-02-boas-praticas-design-patters/exercicios/: README.md
docs/aulas/aula-01-02-boas-praticas-design-patters/exercicios/nivel3/: README.md
docs/aulas/aula-01-02-boas-praticas-design-patters/solucoes/: README.md
docs/aulas/aula-01-02-boas-praticas-design-patters/solucoes/nivel1/: solucao_1_1_srp_refatoracao.py  solucao_1_2_isp_funcionarios.py  solucao_1_3_strategy_desconto.py
docs/aulas/aula-01-02-boas-praticas-design-patters/solucoes/nivel2/solucao_2_1_ecommerce_solid/: README.md  main.py  test_sistema.py
docs/aulas/aula-01-02-boas-praticas-design-patters/solucoes/nivel3/solucao_3_1_banco_hexagonal/: domain.py  teste_progressivo.py
docs/aulas/aula-01-02-boas-praticas-design-patters/solucoes/nivel3/solucao_3_2_monitoramento_distribuido/: patterns.py
docs/aulas/aula-01-apresentacao-disciplina/: README.md
docs/aulas/aula-01-apresentacao-disciplina/exercicios/nivel1/: README.md
docs/aulas/aula-01-apresentacao-disciplina/exercicios/nivel2/: README.md
docs/aulas/aula-01-apresentacao-disciplina/solucoes/: INDICE_COMPLETO.md
docs/aulas/aula-01-apresentacao-disciplina/solucoes/nivel2/: solucao_2_2_chain_responsibility_log.py
docs/aulas/aula-01-apresentacao-disciplina/solucoes/nivel2/solucao_2_1_ecommerce_solid/: __init__.py
docs/aulas/aula-01-boas-praticas-design-patterns/: README.md  plano_aula.md
docs/aulas/aula-01-boas-praticas-design-patterns/exemplos/avancado/: README.md  estudo_caso_refatoracao.py
docs/aulas/aula-01-boas-praticas-design-patterns/exemplos/basico/: README.md  coesao_acoplamento.py  dry_exemplo.py  solid_srp_antes.py  solid_srp_depois.py  yagni_kiss_exemplo.py
docs/aulas/aula-01-boas-praticas-design-patterns/exemplos/intermediario/: README.md  adapter.py  command.py  factory.py  observer.py  singleton.py  strategy.py
docs/aulas/aula-01-boas-praticas-design-patterns/exercicios/: README.md
docs/aulas/aula-01-boas-praticas-design-patterns/exercicios/nivel1/: README.md  exercicio1.md
docs/aulas/aula-01-boas-praticas-design-patterns/exercicios/nivel2/: README.md  exercicio2.md
docs/aulas/aula-01-boas-praticas-design-patterns/exercicios/nivel3/: README.md  exercicio3.md
docs/aulas/aula-01-boas-praticas-design-patterns/recursos/diagramas/: README.md  strategy-uml.md
docs/aulas/aula-01-boas-praticas-design-patterns/recursos/referencias/: README.md  referencias.md
docs/aulas/aula-01-boas-praticas-design-patterns/recursos/slides/: README.md  aula-01-slides.md
docs/aulas/aula-01-boas-praticas-design-patterns/solucoes/: README.md  exercicio1_solucao.py  exercicio2_solucao.py  exercicio3_solucao.py
docs/aulas/aula-02-ambiente-profissional-python/exercicios/nivel3/: README.md
docs/aulas/aula-02-ambiente-profissional-python/solucoes/nivel1/: Makefile  calculadora_impostos_solucao.py  test_gerenciador_tarefas_solucao.py
docs/aulas/aula-03-04-ambiente-profissional-python/: README.html  README.md  plano_aula.md
docs/aulas/aula-03-04-ambiente-profissional-python/exercicios/: README.md
docs/aulas/aula-03-04-ambiente-profissional-python/exercicios/nivel1/: README.md
docs/aulas/aula-03-04-ambiente-profissional-python/exercicios/nivel2/: README.md
docs/aulas/aula-03-04-ambiente-profissional-python/solucoes/nivel1/: .pre-commit-config.yaml  README.md  __init__.py  demo_completa.py  gerenciador_tarefas_solucao.py  pyproject.toml  test_calculadora_impostos_solucao.py
docs/aulas/aula-03-git-ci-cd-github-actions/: README.md  plano_aula.md
docs/aulas/aula-03-git-ci-cd-github-actions/exercicios/nivel2/: README.md
docs/aulas/aula-03-git-ci-cd-github-actions/solucoes/: README.md
docs/aulas/aula-05-06-git-ci-cd-github-actions/: README-backup.md  README.html  README.md
docs/aulas/aula-05-06-git-ci-cd-github-actions/exercicios/: README.md
docs/aulas/aula-05-06-git-ci-cd-github-actions/exercicios/nivel1/: README.md
docs/aulas/aula-05-06-git-ci-cd-github-actions/exercicios/nivel3/: README.md
docs/aulas/aula-07-08-refatoracao-code-smells-sonarcloud/: README.html  README.md
docs/aulas/aula-07-08-refatoracao-code-smells-sonarcloud/exercicios/: README.md
docs/aulas/aula-07-08-refatoracao-code-smells-sonarcloud/exercicios/nivel1/: README.md
docs/aulas/aula-07-08-refatoracao-code-smells-sonarcloud/exercicios/nivel2/: README.md
docs/aulas/aula-07-08-refatoracao-code-smells-sonarcloud/exercicios/nivel3/: README.md
docs/aulas/aula-07-08-refatoracao-code-smells-sonarcloud/solucoes/nivel1/: README.md  exercicio_1_1_extract_method.py  exercicio_1_2_replace_conditional.py  exercicio_1_3_move_method.py
docs/aulas/aula-07-08-refatoracao-code-smells-sonarcloud/solucoes/nivel2/: README.md
docs/aulas/aula-07-08-refatoracao-code-smells-sonarcloud/solucoes/nivel3/: README.md
docs/aulas/aula-09-14-construcao-consumo-apis-rest/: README.html  README.md  plano_aula.md
docs/aulas/aula-09-14-construcao-consumo-apis-rest/exercicios/: README.md
docs/aulas/aula-15-20-integracao-banco-dados/: README.md  plano_aula.md
docs/aulas/aula-21-22-manipulacao-dados-polars/: README.md  plano_aula.md
docs/aulas/aula-23-27-interface-gui-web/: README.md  plano_aula.md
docs/aulas/aula-28-32-containerizacao-ci-cd-deploy/: README.md  plano_aula.md
docs/aulas/aula-33-34-rag-cosmosdb-llm/: README.md  plano_aula.md
docs/aulas/aula-35-36-apresentacoes-finais/: README.md  plano_aula.md
(+32 files in other folders)
